# yf-rust

./: README.md
get_hands_dirty/rs01_hello_world/: Cargo.toml
get_hands_dirty/rs01_hello_world/src/: main
get_hands_dirty/rs02_scrape_url/: Cargo.toml
get_hands_dirty/rs02_scrape_url/src/: main.rs
get_hands_dirty/rs03_var_function/: Cargo.toml
get_hands_dirty/rs03_var_function/src/: main.rs
get_hands_dirty/rs04_data_structure/: Cargo.toml
get_hands_dirty/rs04_data_structure/src/: main.rs
get_hands_dirty/rs05_control_exec/: Cargo.toml
get_hands_dirty/rs05_control_exec/src/: main.rs
get_hands_dirty/rs06_match/: Cargo.toml
get_hands_dirty/rs06_match/src/: main.rs
get_hands_dirty/rs07_error_handle/: Cargo.toml
get_hands_dirty/rs07_error_handle/src/: main.rs
get_hands_dirty/rs08_test/: Cargo.toml
get_hands_dirty/rs08_test/src/: lib.rs
get_hands_dirty/rs09_httpie/: Cargo.toml
get_hands_dirty/rs09_httpie/src/: main.rs
get_hands_dirty/rs10_thumbor/: Cargo.toml  abi.proto
get_hands_dirty/rs10_thumbor/src/: main.rs
get_hands_dirty/rs10_thumbor/src/engine/: mod.rs  photon.rs
get_hands_dirty/rs10_thumbor/src/pb/: abi.rs  mod.rs
get_hands_dirty/rs11_queryer/: Cargo.toml
get_hands_dirty/rs11_queryer/examples/: covid.rs  covid1.rs
get_hands_dirty/rs11_queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
get_hands_dirty/rs12_ownership/: Cargo.toml  README.md
get_hands_dirty/rs12_ownership/examples/: o1_find_pos.rs  o2_sum.rs  o3_is_copy.rs
get_hands_dirty/rs13_borrow/: Cargo.toml
get_hands_dirty/rs13_borrow/examples/: b01_sum.rs  b02_local_ref.rs  b03_push_ref.rs  b04_push_local_ref.rs  b05_multi_mut_ref.rs  b06_mut_ref_and_readonly_ref.rs
others/rs002_hello_cargo/: Cargo.toml
others/rs002_hello_cargo/src/: main.rs
rs002_hello_cargo/: Cargo.toml
rs003_hello_cargo_lib/: Cargo.toml
rs004_vars_data_type/: Cargo.toml
rs004_vars_data_type/src/: main.rs
rs005_static_const/: Cargo.toml
rs005_static_const/src/: main.rs
rust_course/ch01_hello_world/: Cargo.toml
rust_course/ch01_hello_world/src/: main.rs
rust_course/ch02_basic/: Cargo.toml
rust_course/ch02_basic/examples/: b02_data_type_num.rs  b03_char_bool_unit.rs  b04_stmt_expr.rs  b05_fn.rs  b05_ownership.rs  b06_ownership.rs  b07_borrowing.rs  b08_composite_type.rs  b09_string_slice.rs  b10_tuple.rs  b11_struct.rs  b12_enum.rs  b13_array.rs  b14_flow_control.rs  b15_match_iflet.rs  b16_option.rs  b17_pattern_scene.rs  b18_pattern_list.rs  b19_method.rs  b20_generics.rs  b21_trait.rs  b22_trait_object.rs  b23_trait_deep.rs  b24_vector.rs  b25_map.rs  b26_lifecycle.rs  b27_panic.rs  b28_result.rs  var_binding_destructing.rs
rust_course/ch02_basic/src/: front_of_house.rs  lib.rs  main.rs  my_mod.rs
rust_course/ch03_minigrep/src/: lib.rs  main.rs
rust_course/ch04_advanced/: Cargo.toml
