[package]
name = "rs09_httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"                                       # 错误处理
clap = { version = "4.5.4", features = ["derive"] }     # 命令行参数解析
colored = "2.0.0"                                       # 命令终端多彩显示
jsonxf = "1.1"                                          # json格式化
mime = "0.3.17"                                         # 处理mime类型
reqwest = { version = "0.12.4", features = ["json"] }   # http请求
tokio = { version = "1.15.0", features = ["full"] }     # 异步处理库
syntect = "5.0"
