[package]
name = "ch02_basic"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.1"

[[example]]
# 2.1 变量绑定与结构
name = "b01_var_binding_destructing"

[[example]]
# 2.2.1 数值类型
name = "b02_data_type_num"

[[example]]
# 2.2.2 字符、布尔、单元类型
name = "b03_char_bool_unit"

[[example]]
# 2.2.3 语句和表达式
name = "b04_stmt_expr"

[[example]]
# 2.2.4 函数
name = "b05_fn"

[[example]]
# 2.3.1 所有权
name = "b06_ownership"
