[package]
name = "ch02_basic"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.1"

[[example]]
# 2.1 变量绑定与结构
name = "b01_var_binding_destructing"

[[example]]
# 2.2.1 数值类型
name = "b02_data_type_num"

[[example]]
# 2.2.2 字符、布尔、单元类型
name = "b03_char_bool_unit"

[[example]]
# 2.2.3 语句和表达式
name = "b04_stmt_expr"

[[example]]
# 2.2.4 函数
name = "b05_fn"

[[example]]
# 2.3.1 所有权
name = "b06_ownership"

[[example]]
# 2.3.2 引用与借用
name = "b07_borrowing"

[[example]]
# 2.4 复合类型
name = "b08_composite_type"

[[example]]
# 2.4.1 字符串与切片
name = "b09_string_slice"

[[example]]
# 2.4.2 元组
name = "b10_tuple"

[[example]]
# 2.4.3 结构体
name = "b11_struct"

[[example]]
# 2.4.4 枚举
name = "b12_enum"

[[example]]
# 2.4.5 数组
name = "b13_array"

[[example]]
# 2.5 流程控制
name = "b14_flow_control"
