[package]
name = "ch02_basic"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.1"

[[example]]
# 2.1 变量绑定与结构
name = "b01_var_binding_destructing"

[[example]]
# 2.2.1 数值类型
name = "b02_data_type_num"

[[example]]
# 2.2.2 字符、布尔、单元类型
name = "b03_char_bool_unit"

[[example]]
# 2.2.3 语句和表达式
name = "b04_stmt_expr"

[[example]]
# 2.2.4 函数
name = "b05_fn"

[[example]]
# 2.3.1 所有权
name = "b06_ownership"

[[example]]
# 2.3.2 引用与借用
name = "b07_borrowing"

[[example]]
# 2.4 复合类型
name = "b08_composite_type"

[[example]]
# 2.4.1 字符串与切片
name = "b09_string_slice"

[[example]]
# 2.4.2 元组
name = "b10_tuple"

[[example]]
# 2.4.3 结构体
name = "b11_struct"

[[example]]
# 2.4.4 枚举
name = "b12_enum"

[[example]]
# 2.4.5 数组
name = "b13_array"

[[example]]
# 2.5 流程控制
name = "b14_flow_control"

[[example]]
# 2.6.1 match 和 if let
name = "b15_match_iflet"

[[example]]
# 2.6.2 解构 Option
name = "b16_option"

[[example]]
# 2.6.3 模式适用场景
name = "b17_pattern_scene"

[[example]]
# 2.6.4 全模式列表
name = "b18_pattern_list"

[[example]]
# 2.7 方法 Method
name = "b19_method"

[[example]]
# 2.8.1 泛型
name = "b20_generics"

[[example]]
# 2.8.2 特征
name = "b21_trait"

[[example]]
# 2.8.3 特征对象
name = "b22_trait_object"

[[example]]
# 2.8.4 深入了解特征
name = "b23_trait_deep"

[[example]]
# 2.9.1 动态数组 Vector
name = "b24_vector"
